--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+*,
+*:before,
+*:after {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
 p {
     margin: .5em 0;
 }
@@ -13,8 +21,9 @@ a {
 }
 
 .container {
-    max-width: 700px;
+    max-width: 1000px;
     margin: 20px auto;
+    height: 100%;
 }
 
 .container h1 {
@@ -24,6 +33,18 @@ a {
 .website-list {
     border: 2px solid;
     border-radius: 5px;
+    width: 60%;
+    display: inline-block;
+    margin: 0 2.5%;
+}
+
+.sidebar {
+    border: 2px solid;
+    border-radius: 5px;
+    width: 30%;
+    display: inline-block;
+    vertical-align: top;
+    margin: 0 2.5%;
 }
 
 .website-list li {
