--- a/views/base.phtml
+++ b/views/base.phtml
@@ -1,27 +1,3 @@
-<?php
-
-require '../src/WebDevResources/WebsiteData.php';
-
-// If form was not submitted ("Add new website" link)
-if (!isset($_POST['save_website'])) {
-    $website_list = new WebsiteData();
-    $categories = $website_list->getAllCategories();
-}
-
-// check if the form was submitted
-if (isset($_POST['save_website'])) {
-    $website_list = new WebsiteData();
-    if ($website_list->addWebsite($_POST)) {
-        header('Location: index.php');
-        exit;
-    } else {
-        echo 'An error occurred when saving the website.';
-        exit;
-    }
-}
-
-?>
-
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -49,13 +25,13 @@ if (isset($_POST['save_website'])) {
         </nav>
 
         <div class="container">
-            <h1>Add a new Website</h1>
 
-            <?php include 'form.php' ?>
+        <!--      Specific page content goes here      -->
+            <?php $this->content(); ?>
 
         </div>
 
-        <nav class="navbar navbar-default navbar-inverse navbar-fixed-bottom" role="navigation">
+        <nav class="navbar navbar-default navbar-inverse navbar-bottom" role="navigation">
             <div class="container-fluid">
                 <div class="navbar-footer">
                     <p class="copyright">&copy 2015 Korey McMurtrey</p>
@@ -63,6 +39,6 @@ if (isset($_POST['save_website'])) {
             </div>
 
         </nav>
-        <?php include '../views/confirm_delete_modal.php'; ?>
+
     </body>
 </html>
