Fixes code to allow form to display on new.phtml

--- a/views/index/new.phtml
+++ b/views/index/new.phtml
@@ -1,8 +1,7 @@
 <?php
-//$websites = $this->websites;
-//$categories = $this->categories;
+$categories = $this->categories;
 ?>
 
 <h1>Add a new Website</h1>
 
-<?php include '../../public/form.php' ?>
+<?php include 'form.php' ?>
