--- a/views/base.phtml
+++ b/views/base.phtml
@@ -15,7 +15,7 @@
     </head>
     <body>
         <nav class="navbar navbar-default navbar-inverse" role="navigation">
-            <div class="container-fluid">
+            <div class="container">
                 <div class="navbar-header">
                     <a class="navbar-brand" href="index.php">Web Development Resources</a>
                 </div>
