--- a/views/index/index.phtml
+++ b/views/index/index.phtml
@@ -38,10 +38,10 @@ $p = $this->p;
 </div>
 
 <div class="row">
-    <div class="col-md-4 col-md-offset-4">
-        <ul class="pagination">
+    <div class="col-md-4 col-md-offset-4 text-center">
+        <ul class="pagination pagination-sm">
             <?php for ($i = 1; $i <= $p->totalPages; $i++) { ?>
-                <?php echo '<li>' . $i . '</li>'; ?>
+                <li <?php if ($i == $p->currentPage) {echo 'class="active"';} ?>><a href="index.php?pg=<?php echo $i; ?>"><?php echo $i; ?></a></li>
             <?php }; ?>
         </ul>
     </div>
