Adds minor list style changes

--- a/views/base.phtml
+++ b/views/base.phtml
@@ -31,7 +31,7 @@
 
         </div>
 
-        <nav class="navbar navbar-default navbar-inverse navbar-bottom" role="navigation">
+        <nav class="navbar navbar-default navbar-inverse navbar-fixed-bottom" role="navigation">
             <div class="container-fluid">
                 <div class="navbar-footer">
                     <p class="copyright">&copy 2015 Korey McMurtrey</p>
