--- a/views/css/style.css
+++ b/views/css/style.css
@@ -19,6 +19,11 @@ a {
     text-decoration: none;
 }
 
+h2 {
+    text-align: center;
+    text-decoration: underline;
+}
+
 .website-title {
     text-decoration: underline;
     font-size: 1.2em;
