--- a/views/index/index.phtml
+++ b/views/index/index.phtml
@@ -4,6 +4,7 @@
 $websites = $this->websites;
 $categories = $this->categories;
 $p = $this->p;
+$votes = $this->votes;
 ?>
 
 <h1><a href="index.php">Web Development Resources</a></h1>
@@ -19,8 +20,7 @@ $p = $this->p;
                     <p>Description: <?php echo $website['description'] ?></p>
 
                     <!--Vote button-->
-                    <a href="index.php<?php echo '?id=' . $website['id'] . '&pg=' . $p->currentPage;
-                        if (isset($_GET['category'])) {echo '&category=' . $_GET['category'];} ?>" class="btn btn-success btn-sm">
+                    <a href=<?php $votes->getVoteUrl($website['id'], $p->currentPage); ?> class="btn btn-success btn-sm">
                         <span class="glyphicon glyphicon-thumbs-up">
                             <?php if (isset($website['count'])) {echo $website['count'];} else {echo 0;} ?>
                         </span>
