--- a/views/css/style.css
+++ b/views/css/style.css
@@ -47,16 +47,16 @@ ul {
     padding: 10px;
 }
 
-.website-list ul li {
-    margin-bottom: 25px;
-}
-
 .website-list ul li p {
     margin: 0 0 5px;
 }
 
 .main-list {
     margin-top: 40px;
+}
+
+.main-list li {
+    margin-bottom: 25px;
 }
 
 .sidebar {
@@ -66,10 +66,6 @@ ul {
 
 .sidebar ul {
     padding: 0;
-}
-
-.website-list li {
-    margin-bottom: 1em;
 }
 
 /*Form*/
