--- a/views/index/index.phtml
+++ b/views/index/index.phtml
@@ -12,15 +12,16 @@ $votes = $this->votes;
     <div class="website-list col-md-6 col-md-offset-1">
         <h2><?php if (isset($_GET['category'])) {echo $_GET['category'];} else {echo 'All Websites';} ?></h2>
 
-        <form class="form-inline">
-            <div class="form-group-sm pull-right">
-                <label for="sort">Sort by</label>
-                <select name="sort" class="form-control">
-                    <option>Alphabetically</option>
-                    <option>Most Popular</option>
-                </select>
-            </div>
-        </form>
+        <div class="dropdown pull-right">
+            <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                Sort by
+                <span class="caret"></span>
+            </button>
+            <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenu1">
+                <li><a href="#">Alphabetically</a></li>
+                <li><a href="#">Most Popular</a></li>
+            </ul>
+        </div>
 
         <ul class="main-list">
             <!-- loop through each website -->
