Removes ['pg'] from getSortUrl() address

--- a/views/index/index.phtml
+++ b/views/index/index.phtml
@@ -20,8 +20,8 @@ $votes = $this->votes;
                 <span class="caret"></span>
             </button>
             <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenu1">
-                <li><a href=<?php $this->website_list->getSortUrl($p->currentPage, 'alpha'); ?>>Alphabetically</a></li>
-                <li><a href=<?php $this->website_list->getSortUrl($p->currentPage, 'vote'); ?>>Most Popular</a></li>
+                <li><a href=<?php $this->website_list->getSortUrl('alpha'); ?>>Alphabetically</a></li>
+                <li><a href=<?php $this->website_list->getSortUrl('vote'); ?>>Most Popular</a></li>
             </ul>
         </div>
 
