--- a/views/base.phtml
+++ b/views/base.phtml
@@ -6,12 +6,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Web Development Resources</title>
 
-        <link href="/public/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-        <link rel="stylesheet" type="text/css" href="/public/css/style.css">
+        <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
+        <link rel="stylesheet" type="text/css" href="css/style.css">
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-        <script src="/public/js/bootstrap.min.js"></script>
-        <script src="/public/js/app.js"></script>
+        <script src="js/bootstrap.min.js"></script>
+        <script src="js/app.js"></script>
     </head>
     <body>
         <nav class="navbar navbar-default navbar-inverse" role="navigation">
