--- a/views/base.phtml
+++ b/views/base.phtml
@@ -6,20 +6,20 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Web Development Resources</title>
 
-        <link href="/web_dev_resources/public/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-        <link rel="stylesheet" type="text/css" href="/web_dev_resources/public/css/style.css">
+        <link href=<?php echo BASE_URL . "/css/bootstrap.min.css"; ?> rel="stylesheet" type="text/css">
+        <link rel="stylesheet" type="text/css" href=<?php echo BASE_URL . "/css/style.css"; ?>>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-        <script src="/web_dev_resources/public/js/bootstrap.min.js"></script>
-        <script src="/web_dev_resources/public/js/app.js"></script>
+        <script src=<?php echo BASE_URL . "/js/bootstrap.min.js"; ?>></script>
+        <script src=<?php echo BASE_URL . "/js/app.js"; ?>></script>
     </head>
     <body>
         <nav class="navbar navbar-default navbar-inverse" role="navigation">
             <div class="container">
                 <div class="navbar-header">
-                    <a class="navbar-brand" href="/web_dev_resources/public/index.php">Web Development Resources</a>
+                    <a class="navbar-brand" href=<?php echo BASE_URL . "/index.php"; ?>>Web Development Resources</a>
                 </div>
-                <a href=<?php echo BASE_URL . 'new/'; ?> type="button" class="btn btn-default navbar-btn navbar-right">New Website</a>
+                <a href=<?php echo BASE_URL . '/new/'; ?> type="button" class="btn btn-default navbar-btn navbar-right">New Website</a>
             </div>
 
         </nav>
