--- a/views/index/index.phtml
+++ b/views/index/index.phtml
@@ -8,7 +8,7 @@ $p = $this->p;
 $votes = $this->votes;
 ?>
 
-<h1><a href="/web_dev_resources/public/index.php">Web Development Resources</a></h1>
+<h1><a href=<?php echo BASE_URL . "/index.php"; ?>>Web Development Resources</a></h1>
 <div class="row">
     <div class="website-list col-md-6 col-md-offset-1">
         <h2><?php if (isset($_GET['category'])) {echo $_GET['category'];} else {echo 'All Websites';} ?></h2>
@@ -42,14 +42,14 @@ $votes = $this->votes;
                     </a>
 
                     <!--Edit button-->
-                    <a href="edit.php?id=<?php echo $website['id'] ?>" class="btn btn-primary btn-sm" role="button">
+                    <a href=<?php echo BASE_URL . '/edit.php?id=' . $website['id']; ?> class="btn btn-primary btn-sm" role="button">
                         <span class="glyphicon glyphicon-pencil">
                             Edit
                         </span>
                     </a>
 
                     <!--Delete button-->
-                    <a class="btn btn-default btn-sm delete-btn" role="button" data-toggle="modal" data-target="#confirm-delete" data-href="delete.php?id=<?php echo $website['id']; ?>">
+                    <a class="btn btn-default btn-sm delete-btn" role="button" data-toggle="modal" data-target="#confirm-delete" data-href=<?php echo BASE_URL . '/delete.php?id=' . $website['id']; ?>>
                         <span class="glyphicon glyphicon-remove">
                             Delete
                         </span>
@@ -65,7 +65,7 @@ $votes = $this->votes;
         <ul>
             <?php foreach ( $categories as $category ) : ?>
                 <li>
-                    <?php echo '<a href=' . BASE_URL . 'category/' . $category['category'] . '/>' . $category['category'] . '</a>' ; ?>
+                    <?php echo '<a href=' . BASE_URL . '/category/' . $category['category'] . '/>' . $category['category'] . '</a>' ; ?>
                 </li>
             <?php endforeach; ?>
         </ul>
