--- a/views/base.phtml
+++ b/views/base.phtml
@@ -17,7 +17,7 @@
         <nav class="navbar navbar-default navbar-inverse" role="navigation">
             <div class="container">
                 <div class="navbar-header">
-                    <a class="navbar-brand" href=<?php echo BASE_URL . "/index.php"; ?>>Web Development Resources</a>
+                    <a class="navbar-brand" href=<?php echo BASE_URL . "/"; ?>>Web Development Resources</a>
                 </div>
                 <a href=<?php echo BASE_URL . '/new/'; ?> type="button" class="btn btn-default navbar-btn navbar-right">New Website</a>
             </div>
