--- a/views/index/index.phtml
+++ b/views/index/index.phtml
@@ -8,7 +8,7 @@ $p = $this->p;
 $votes = $this->votes;
 ?>
 
-<h1><a href=<?php echo BASE_URL . "/index.php"; ?>>Web Development Resources</a></h1>
+<h1><a href=<?php echo BASE_URL . "/"; ?>>Web Development Resources</a></h1>
 <div class="row">
     <div class="website-list col-md-6 col-md-offset-1">
         <h2><?php if (isset($_GET['category'])) {echo $_GET['category'];} else {echo 'All Websites';} ?></h2>
