Adds RewriteRule for edit.php

--- a/views/index/index.phtml
+++ b/views/index/index.phtml
@@ -42,7 +42,7 @@ $votes = $this->votes;
                     </a>
 
                     <!--Edit button-->
-                    <a href=<?php echo BASE_URL . '/edit.php?id=' . $website['id']; ?> class="btn btn-primary btn-sm" role="button">
+                    <a href=<?php echo BASE_URL . '/edit/' . $website['id'] . '/'; ?> class="btn btn-primary btn-sm" role="button">
                         <span class="glyphicon glyphicon-pencil">
                             Edit
                         </span>
