Adds comments to files.

--- a/views/base.phtml
+++ b/views/base.phtml
@@ -14,6 +14,7 @@
         <script src=<?php echo BASE_URL . "/js/app.js"; ?>></script>
     </head>
     <body>
+    <!--    The header elements common to each page view.    -->
         <nav class="navbar navbar-default navbar-inverse" role="navigation">
             <div class="container">
                 <div class="navbar-header">
@@ -31,6 +32,7 @@
 
         </div>
 
+    <!--  The footer elements common to each page view.  -->
         <nav class="navbar navbar-default navbar-inverse navbar-fixed-bottom" role="navigation">
             <div class="container-fluid">
                 <div class="navbar-footer">
