--- a/views/index/index.phtml
+++ b/views/index/index.phtml
@@ -10,10 +10,12 @@ $votes = $this->votes;
 
 <h1><a href=<?php echo BASE_URL . "/"; ?>>Web Development Resources</a></h1>
 <div class="row">
+
+    <!--  Content section to display list of websites and their associated elements.  -->
     <div class="website-list col-md-6 col-md-offset-1">
         <h2><?php if (isset($_GET['category'])) {echo $_GET['category'];} else {echo 'All Websites';} ?></h2>
 
-        <!-- Dropdown menu for sorting websites -->
+        <!-- Drop-down menu for sorting websites -->
         <div class="dropdown pull-right">
             <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
                 Sort by
@@ -26,11 +28,11 @@ $votes = $this->votes;
             </ul>
         </div>
 
+        <!--    Displays the list of websites.    -->
         <ul class="main-list">
             <!-- loop through each website -->
             <?php foreach( $websites as $website ) : ?>
                 <li>
-                    <!-- output: <a href="__URL__">__TITLE__</a> -->
                     <a href="<?php echo $website['url'] ?>" class="website-title"><?php echo $website['title'] ?></a>
                     <p>Description: <?php echo $website['description'] ?></p>
 
@@ -59,6 +61,7 @@ $votes = $this->votes;
         </ul>
     </div>
 
+    <!--  Sidebar listing the different categories.  -->
     <div class="sidebar col-md-3 col-md-offset-1">
         <h2>Category</h2>
 
@@ -73,6 +76,7 @@ $votes = $this->votes;
     </div>
 </div>
 
+<!--  Pagination elements.  -->
 <div class="row">
     <div class="col-md-4 col-md-offset-4 text-center">
         <ul class="pagination pagination-sm">
